--- a/app.html
+++ b/app.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Área Autenticada</title>
+  <title>RG2 Calculadora</title>
+  <meta name="theme-color" content="#2563eb">
+  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" href="./icons/icon-192.png" sizes="192x192" type="image/png">
+  <link rel="apple-touch-icon" href="./icons/icon-192.png" sizes="192x192">
   <style>
     :root { color-scheme: light dark; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif; margin: 0; display: grid; place-items: center; min-height: 100vh; background: #0f172a; color: #e2e8f0; }
@@ -30,5 +34,12 @@
   </div>
 
   <script type="module" src="./auth.js"></script>
+  <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('./service-worker.js').then(reg=>{setInterval(()=>reg.update(),300000)})
+      navigator.serviceWorker.addEventListener('controllerchange',()=>{location.reload()})
+      navigator.serviceWorker.addEventListener('message',e=>{if(e.data&&e.data.type==='NEW_VERSION'){location.reload()}})
+    }
+  </script>
 </body>
 </html>
