--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login Firebase</title>
+  <title>RG2 Calculadora — Login</title>
+  <meta name="theme-color" content="#2563eb">
+  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" href="./icons/icon-192.png" sizes="192x192" type="image/png">
+  <link rel="apple-touch-icon" href="./icons/icon-192.png" sizes="192x192">
   <style>
     :root { color-scheme: light dark; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif; margin: 0; display: grid; place-items: center; min-height: 100vh; background: #0f172a; color: #e2e8f0; }
@@ -45,6 +49,8 @@
 
     <button id="google" class="btn" style="background:#ea4335;">Entrar com Google</button>
 
+    <button id="installPwa" class="btn secondary hidden" style="margin-top:8px;">Instalar aplicativo</button>
+
     <div class="muted">Após login, seus dados aparecerão abaixo</div>
 
     <div id="user" class="row hidden" style="margin-top:16px;">
@@ -56,5 +62,16 @@
   </div>
 
   <script type="module" src="./auth.js"></script>
+  <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker.register('./service-worker.js').then(reg=>{setInterval(()=>reg.update(),300000)})
+      navigator.serviceWorker.addEventListener('controllerchange',()=>{location.reload()})
+      navigator.serviceWorker.addEventListener('message',e=>{if(e.data&&e.data.type==='NEW_VERSION'){location.reload()}})
+    }
+    let deferredPrompt=null
+    const installBtn=document.getElementById('installPwa')
+    if(installBtn){installBtn.addEventListener('click',async()=>{if(!deferredPrompt)return;const r=await deferredPrompt.prompt();deferredPrompt=null;installBtn.classList.add('hidden')})}
+    window.addEventListener('beforeinstallprompt',e=>{e.preventDefault();deferredPrompt=e;if(installBtn)installBtn.classList.remove('hidden')})
+  </script>
 </body>
 </html>
