--- a/app.html
+++ b/app.html
@@ -92,10 +92,10 @@
     }
 
     .botao-calculadora {
-        position: fixed;
+        position: fixad;
         bottom: 12px !important;
         left: 12px !important;
-        right: auto !important;
+        right: 20px !important;
         background: var(--verde);
         color: white;
         padding: 6px 10px !important;
@@ -134,10 +134,11 @@
     <div id="resultado">Total: R$ 0,00</div>
 </div>
 
+
 <button class="botao-calculadora" onclick="window.location.href='https://pikachurg2.github.io/Calculadora-Pro-PP/'">
     Calculadora
 </button>
-
+</div>
 <script>
     let produto = null;
     let pagamento = null;
