--- a/app.html
+++ b/app.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RG2 Calculadora</title>
+  <title>RG2 TV FREE</title>
   <meta name="theme-color" content="#2563eb">
   <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" href="./icons/icon.svg" type="image/svg+xml">
   <link rel="icon" href="./icons/icon-192.png" sizes="192x192" type="image/png">
   <link rel="apple-touch-icon" href="./icons/icon-192.png" sizes="192x192">
   <style>
@@ -111,7 +112,7 @@
 
 <body>
 
-<header>⚽ POSTO PARAÍSO ⚽</header>
+<header>RG2 TV FREE</header>
 
 <div id="calculadora" class="container">
 
