--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>RG2 Calculadora — Login</title>
+  <title>RG2 TV FREE — Login</title>
   <meta name="theme-color" content="#2563eb">
   <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" href="./icons/icon.svg" type="image/svg+xml">
   <link rel="icon" href="./icons/icon-192.png" sizes="192x192" type="image/png">
   <link rel="apple-touch-icon" href="./icons/icon-192.png" sizes="192x192">
   <style>
