--- a/app.html
+++ b/app.html
@@ -136,7 +136,7 @@
 </div>
 
 
-<button class="botao-calculadora" onclick="window.location.href='https://pikachurg2.github.io/Calculadora-Pro-PP/'">
+<button class="botao-calculadora" onclick="window.location.href='https://cal-simples-pro-v2.vercel.app/'">
     Calculadora
 </button>
 </div>
